Added screeshot & meta description for the app

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GitHives</title>
+  <title>Githives - Hassle-free GitHub Repo Downloads</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Githives - A hassle-free way to download specific files and folders from GitHub repositories. Say goodbye to cloning massive repos! Create shareable links for your files.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
